{
  "version": 4,
  "terraform_version": "0.14.2",
  "serial": 19,
  "lineage": "7f86ae52-b1fe-6854-079a-3ec664645e91",
  "resources": [
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "natip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0ac9dcce5e673ac03",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-208-101-99.compute-1.amazonaws.com",
            "public_ip": "54.208.101.99",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502690301488:internet-gateway/igw-03b279d50ed63a456",
            "id": "igw-03b279d50ed63a456",
            "owner_id": "502690301488",
            "vpc_id": "vpc-0102d796eaf7df9f6"
          },
          "dependencies": [
            "module.myvpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ac9dcce5e673ac03",
            "id": "nat-02294a60dd69b6c1a",
            "network_interface_id": "eni-0d2ffdbff02f45945",
            "private_ip": "10.0.1.161",
            "public_ip": "54.208.101.99",
            "subnet_id": "subnet-0969db69a154d11f6"
          },
          "dependencies": [
            "module.myvpc.aws_eip.natip",
            "module.myvpc.aws_internet_gateway.igw",
            "module.myvpc.aws_subnet.public_subnets",
            "module.myvpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02fe47e2c07a5427a",
            "owner_id": "502690301488",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02294a60dd69b6c1a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0102d796eaf7df9f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myvpc.aws_eip.natip",
            "module.myvpc.aws_internet_gateway.igw",
            "module.myvpc.aws_nat_gateway.ngw",
            "module.myvpc.aws_subnet.public_subnets",
            "module.myvpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pubrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05655b6c22e544200",
            "owner_id": "502690301488",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03b279d50ed63a456",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0102d796eaf7df9f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myvpc.aws_internet_gateway.igw",
            "module.myvpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cdad4f7f345e5707",
            "route_table_id": "rtb-02fe47e2c07a5427a",
            "subnet_id": "subnet-0e3b347879edd5f93"
          },
          "dependencies": [
            "module.myvpc.aws_eip.natip",
            "module.myvpc.aws_internet_gateway.igw",
            "module.myvpc.aws_nat_gateway.ngw",
            "module.myvpc.aws_route_table.privrt",
            "module.myvpc.aws_subnet.private_subnets",
            "module.myvpc.aws_subnet.public_subnets",
            "module.myvpc.aws_vpc.k8s_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062992577dda279d8",
            "route_table_id": "rtb-02fe47e2c07a5427a",
            "subnet_id": "subnet-0d88d0f929fecd680"
          },
          "dependencies": [
            "module.myvpc.aws_eip.natip",
            "module.myvpc.aws_internet_gateway.igw",
            "module.myvpc.aws_nat_gateway.ngw",
            "module.myvpc.aws_route_table.privrt",
            "module.myvpc.aws_subnet.private_subnets",
            "module.myvpc.aws_subnet.public_subnets",
            "module.myvpc.aws_vpc.k8s_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c76b54e70b4febd",
            "route_table_id": "rtb-02fe47e2c07a5427a",
            "subnet_id": "subnet-0e8ec9d154ac3087b"
          },
          "dependencies": [
            "module.myvpc.aws_eip.natip",
            "module.myvpc.aws_internet_gateway.igw",
            "module.myvpc.aws_nat_gateway.ngw",
            "module.myvpc.aws_route_table.privrt",
            "module.myvpc.aws_subnet.private_subnets",
            "module.myvpc.aws_subnet.public_subnets",
            "module.myvpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5972163f9e618db",
            "route_table_id": "rtb-05655b6c22e544200",
            "subnet_id": "subnet-0969db69a154d11f6"
          },
          "dependencies": [
            "module.myvpc.aws_internet_gateway.igw",
            "module.myvpc.aws_route_table.pubrt",
            "module.myvpc.aws_subnet.public_subnets",
            "module.myvpc.aws_vpc.k8s_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab7b921db0410335",
            "route_table_id": "rtb-05655b6c22e544200",
            "subnet_id": "subnet-0570a6b14436a2e62"
          },
          "dependencies": [
            "module.myvpc.aws_internet_gateway.igw",
            "module.myvpc.aws_route_table.pubrt",
            "module.myvpc.aws_subnet.public_subnets",
            "module.myvpc.aws_vpc.k8s_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2b303a8f859a942",
            "route_table_id": "rtb-05655b6c22e544200",
            "subnet_id": "subnet-07bdef2a65ef72187"
          },
          "dependencies": [
            "module.myvpc.aws_internet_gateway.igw",
            "module.myvpc.aws_route_table.pubrt",
            "module.myvpc.aws_subnet.public_subnets",
            "module.myvpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502690301488:subnet/subnet-0e3b347879edd5f93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0e3b347879edd5f93",
            "map_public_ip_on_launch": false,
            "owner_id": "502690301488",
            "tags": {
              "kubernetes.io/cluster/demo-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0102d796eaf7df9f6"
          },
          "dependencies": [
            "module.myvpc.aws_internet_gateway.igw",
            "module.myvpc.aws_vpc.k8s_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502690301488:subnet/subnet-0d88d0f929fecd680",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0d88d0f929fecd680",
            "map_public_ip_on_launch": false,
            "owner_id": "502690301488",
            "tags": {
              "kubernetes.io/cluster/demo-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0102d796eaf7df9f6"
          },
          "dependencies": [
            "module.myvpc.aws_internet_gateway.igw",
            "module.myvpc.aws_vpc.k8s_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502690301488:subnet/subnet-0e8ec9d154ac3087b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0e8ec9d154ac3087b",
            "map_public_ip_on_launch": false,
            "owner_id": "502690301488",
            "tags": {
              "kubernetes.io/cluster/demo-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0102d796eaf7df9f6"
          },
          "dependencies": [
            "module.myvpc.aws_internet_gateway.igw",
            "module.myvpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502690301488:subnet/subnet-0969db69a154d11f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0969db69a154d11f6",
            "map_public_ip_on_launch": true,
            "owner_id": "502690301488",
            "tags": {
              "kubernetes.io/cluster/demo-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0102d796eaf7df9f6"
          },
          "dependencies": [
            "module.myvpc.aws_internet_gateway.igw",
            "module.myvpc.aws_vpc.k8s_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502690301488:subnet/subnet-0570a6b14436a2e62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0570a6b14436a2e62",
            "map_public_ip_on_launch": true,
            "owner_id": "502690301488",
            "tags": {
              "kubernetes.io/cluster/demo-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0102d796eaf7df9f6"
          },
          "dependencies": [
            "module.myvpc.aws_internet_gateway.igw",
            "module.myvpc.aws_vpc.k8s_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502690301488:subnet/subnet-07bdef2a65ef72187",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-07bdef2a65ef72187",
            "map_public_ip_on_launch": true,
            "owner_id": "502690301488",
            "tags": {
              "kubernetes.io/cluster/demo-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0102d796eaf7df9f6"
          },
          "dependencies": [
            "module.myvpc.aws_internet_gateway.igw",
            "module.myvpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "k8s_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502690301488:vpc/vpc-0102d796eaf7df9f6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00b63514c80a62dd8",
            "default_route_table_id": "rtb-04acd107b52ba82ff",
            "default_security_group_id": "sg-01c134ba0809af94d",
            "dhcp_options_id": "dopt-516c122b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0102d796eaf7df9f6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04acd107b52ba82ff",
            "owner_id": "502690301488",
            "tags": {
              "kubernetes.io/cluster/demo-cluster": "shared"
            }
          }
        }
      ]
    }
  ]
}